chart/manifest/0006-jenkins.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jenkins
    helm.sh/chart: jenkins-4.2.20
  name: jenkins-agent
  namespace: jenkins
spec:
  ports:
    - name: agent-listener
      port: 50000
      targetPort: 50000
  selector:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jenkins
    helm.sh/chart: jenkins-4.2.20
  name: jenkins
  namespace: jenkins
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
  type: ClusterIP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jenkins
    helm.sh/chart: jenkins-4.2.20
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: jenkins-controller
      app.kubernetes.io/instance: jenkins
  serviceName: jenkins
  template:
    metadata:
      annotations:
        checksum/config: 2b0c4702e7dc5a1c165c86e02e5a2c8804a2f5b8c94c9735042c0dbdcba59c2f
      labels:
        app.kubernetes.io/component: jenkins-controller
        app.kubernetes.io/instance: jenkins
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: jenkins
    spec:
      containers:
        - args:
            - --httpPort=8080
          image: jenkins/jenkins:2.375.1-jdk11
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /login
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          name: jenkins
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 50000
              name: agent-listener
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /login
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 2000m
              memory: 4096Mi
            requests:
              cpu: 50m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsGroup: 1000
            runAsUser: 1000
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /login
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /var/jenkins_home
              name: jenkins-home
              readOnly: false
            - mountPath: /var/jenkins_config
              name: jenkins-config
              readOnly: true
            - mountPath: /usr/share/jenkins/ref/plugins/
              name: plugin-dir
              readOnly: false
            - mountPath: /var/jenkins_home/casc_configs
              name: sc-config-volume
            - mountPath: /run/secrets/additional
              name: jenkins-secrets
              readOnly: true
            - mountPath: /var/jenkins_cache
              name: jenkins-cache
            - mountPath: /tmp
              name: tmp-volume
        - env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: LABEL
              value: jenkins-jenkins-config
            - name: FOLDER
              value: /var/jenkins_home/casc_configs
            - name: NAMESPACE
              value: jenkins
            - name: REQ_URL
              value: http://localhost:8080/reload-configuration-as-code/?casc-reload-token=$(POD_NAME)
            - name: REQ_METHOD
              value: POST
            - name: REQ_RETRY_CONNECT
              value: "10"
          image: kiwigrid/k8s-sidecar:1.15.0
          imagePullPolicy: IfNotPresent
          name: config-reload
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /var/jenkins_home/casc_configs
              name: sc-config-volume
            - mountPath: /var/jenkins_home
              name: jenkins-home
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: jenkins
      volumes:
        - emptyDir: {}
          name: plugins
        - configMap:
            name: jenkins
          name: jenkins-config
        - emptyDir: {}
          name: plugin-dir
        - name: jenkins-secrets
          projected:
            sources:
              - secret:
                  items:
                    - key: jenkins-admin-user
                      path: chart-admin-username
                    - key: jenkins-admin-password
                      path: chart-admin-password
                  name: jenkins
        - emptyDir: {}
          name: jenkins-cache
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins
        - emptyDir: {}
          name: sc-config-volume
        - emptyDir: {}
          name: tmp-volume
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/component: jenkins-controller
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: jenkins
    helm.sh/chart: jenkins-4.2.20
  name: jenkins
  namespace: jenkins
spec:
  rules:
    - host: jenkins.lab9.cloud
      http:
        paths:
          - backend:
              service:
                name: jenkins
                port:
                  number: 8080
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - jenkins.lab9.cloud
      secretName: jenkins-ingress-tls
---
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test-success
  name: jenkins-ui-test-kllqh
  namespace: jenkins
spec:
  containers:
    - command:
        - /tools/bats/bin/bats
        - -t
        - /tests/run.sh
      image: jenkins/jenkins:2.375.1-jdk11
      name: jenkins-ui-test
      volumeMounts:
        - mountPath: /tests
          name: tests
          readOnly: true
        - mountPath: /tools
          name: tools
  restartPolicy: Never
  volumes:
    - configMap:
        name: jenkins-tests
      name: tests
    - emptyDir: {}
      name: tools
